<resources>
    <string name="app_name">FisTx</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_h1">Selamat Datang Kembali</string>
    <string name="login_h2">Silahkan masuk ke akun anda:</string>
    <string name="phone_number">No. Telepon</string>
    <string name="password">Kata Sandi</string>
    <string name="hint_input_phone">Masukkan No Telepon</string>
    <string name="hint_password">Masukkan kata sandi</string>
    <string name="text_btn_login">Masuk</string>
    <string name="text_forgot_password">Lupa kata sandi anda?</string>
    <string name="text_link_register">Belum punya akun? <b><font color='#377FD9'> Daftar</font></b></string>
    <string name="register_h1">Daftarkan Akun Anda!</string>
    <string name="register_h2">Lengkapi data berikut:</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="hint_full_name">Masukan nama lengkap</string>
    <string name="create_password">Buat Kata Sandi</string>
    <string name="hint_create_password">Buat kata sandi</string>
    <string name="confirm_password_textView">Konfirmasi Kata Sandi</string>
    <string name="hint_confirm_password">Ulangi Kata sandi</string>
    <string name="text_btn_register">Daftar</string>
    <string name="term_and_condition_link">Dengan melakukan pendaftaran akun, maka anda bersedia mematuhi <font color='#377FD9'><b>Syarat &amp; Ketentuan</b></font></string>
    <string name="verification_info_textView">Masukan kode verifikasi yang kami kirimkan ke <b>0858******01</b></string>
    <string name="btn_verification_textView">Verifikasi</string>
    <string name="resend_code_textView">Belum menerima kode?</string>
    <string name="resend_code_text_button">Kirim Ulang</string>
    <string name="forgot_password_textView">Masukan nomor telepon untuk mengganti kata sandi</string>
    <string name="active_phone_number">No. Telepon Aktif</string>
    <string name="send_text_button">Kirim</string>
    <string name="next_process_button_text">Lanjutkan</string>
    <string name="create_newPassword_textView">Silahkan buat kata sandi baru</string>
    <string name="dialog_register_success">Pendaftaran Berhasil</string>
    <string name="dialog_desc_register_success">Selamat datang di FisTX Mobile</string>
    <string name="text_dialog_success">Berhasil</string>
    <string name="text_dialog_reset_password_desc">Kata sandi telah diperbaharui.</string>
    <string name="reset_fragment1">Lupa Kata Sandi</string>
    <string name="reset_fragment2">Verifikasi Nomor</string>
    <string name="reset_fragment3">Buat Kata Sandi Baru</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Aktivitas</string>
    <string name="title_notifications">Forum</string>
    <string name="title_profile">Profil</string>
    <string name="text_setting_acount">Pengaturan Akun</string>
    <string name="personal_info_textView">Informasi Personal</string>
    <string name="security_textView">Security</string>
    <string name="about_textView">Tentang</string>
    <string name="contact_textView">Hubungi Kami</string>
    <string name="about_us_textView">Tentang FisTx Mobile</string>
    <string name="logout_textView">Keluar</string>
    <string name="choose_photo_textView">Ganti Foto Profil</string>
    <string name="personal_data_textView">Data Personal</string>
    <string name="birth_date_textView">Tanggal Lahir</string>
    <string name="hint_date">Pilih tanggal</string>
    <string name="hint_email">Masukan Email</string>
    <string name="gender_textView">Jenis Kelamin</string>
    <string name="gender_man">Laki-laki</string>
    <string name="gender_woman">Perempuan</string>
    <string name="province_textview">Provinsi</string>
    <string name="hint_provinsi">Pilih Provinsi</string>
    <string name="kota_kabupaten_textView">Kota/Kabupaten</string>
    <string name="hint_kota_kabupaten">Pilih Kota/Kabupaten</string>
    <string name="kelurahan_desa_textView">Kelurahan/Desa</string>
    <string name="hint_kelurahan_desa">Pilih Kelurahan/desa</string>
    <string name="kecamatan_textView">Kecamatan</string>
    <string name="hint_kecamatan">Pilih Kecamatan</string>
    <string name="address_textView">Alamat Lengkap</string>
    <string name="hint_address">Contoh: Jl. Raya Soekarno-Hatta no.123</string>
    <string name="btn_save">Simpan</string>
    <string name="change_password_textview">Ubah Kata Sandi</string>
    <string name="hint_current_password">Masukan kata sandi saait ini</string>
    <string name="current_password_textview">Kata Sandi Saat Ini</string>
    <string name="hint_create_new_password">Masukan kata sandi baru</string>
    <string name="confirm_new_password_textview">Konfirmasi Kata Sandi Baru</string>
    <string name="hint_confirm_new_password">Ulangi kata sandi baru</string>
    <string name="create_new_password_textview">Buat kata sandi baru</string>
    <string name="about_us_textview">Beri kritik dan saran atau pertanyaan anda kepada FisTx Mobile, sebagai acuan untuk perkembangan kami.</string>
    <string name="banner_textView">Produk Unggulan Fistx</string>
    <string name="service_textView">Layanan FisTx</string>
    <string name="pond_profile_textview">Profil Tambak</string>
    <string name="pond_profile_desc_textview">Informasi lahan dan kolam anda</string>
    <string name="device_textview">Device</string>
    <string name="device_desc_textview">Informasi device yang anda gunakan</string>
    <string name="calculator_textview">kalkulator</string>
    <string name="calculator_desc_textview">Alkalinitas, Ammonia, Karbon</string>
    <string name="shrimp_price_textview">Harga Udang</string>
    <string name="shrimp_price_desc_textview">Informasi harga udang di berbagai daerah</string>
    <string name="summary_activity_textview">Ringkasan Aktivitas</string>
    <string name="dummy_pond1">Kolam Udang 1</string>
    <string name="dummy_pond_location1">Lahan Pakem</string>
    <string name="dummy_date">September 2023</string>
    <string name="period_textview">Periode</string>
    <string name="pond_unavailable">Kolam tidak tersedia</string>
    <string name="pond_location_unavailable">-</string>
    <string name="feed_chart_textview">Grafik Pakan</string>
    <string name="feed_standard_textview">Standar pakan FisTx</string>
    <string name="daily_ph_chart_textview">Grafik pH Harian</string>
    <string name="change_chart_textview">Ganti grafik</string>
    <string name="sampling_chart_textview">Grafik Sampling</string>
    <string name="sampling_chart_label_textview">Pengambilan ke-</string>
    <string name="feed_chart_label_textview">Waktu</string>
    <string name="ph_chart_label_textview">pH harian</string>
    <string name="news_textview">Kabar dan Berita</string>
    <string name="all_news_textview">Lihat Semua</string>
    <string name="empty_device_textview">Tidak Ada Device</string>
    <string name="btn_add_device_textview">Tambah Device</string>
    <string name="empty_pond_textview">Tidak Ada Lahan</string>
    <string name="empty_pond_desc_textview">Belum ada data lahan di tambak. Tekan tombol dibawah untuk menambahkan data lahan.</string>
    <string name="btn_add_pond_textview">Buat Lahan</string>
    <string name="land_name_textview">Nama Lahan</string>
    <string name="hint_land_name_textview">Tulis nama lahan</string>
    <string name="wide_land_textview">Luas Lahan (m)</string>
    <string name="hint_wide_land_textview">Contoh: 250</string>
    <string name="land_location_textview">Lokasi Lahan</string>
    <string name="water_resource_textview">Sumber Air</string>
    <string name="well_textview">Sumur</string>
    <string name="river_textview">Sungai</string>
    <string name="sea_textview">Laut</string>
    <string name="dialog_create_land_success">Berhasil Disimpan</string>
    <string name="dialog_desc_create_land_success">Anda telah membuat lahan.</string>
    <string name="calculator_alkalinity_textview">Kalkulator Alkalinitas</string>
    <string name="calculator_alkalinity_desc_textview">Alkalinitas adalah salah satu yang menunjang kehidupan udang. rekomendasi Pengapuran:</string>
    <string name="current_alkalinity_textview">Alkalinitas Sekarang (Mol)</string>
    <string name="hint_current_alkalinity">Masukan nilai sekarang</string>
    <string name="desired_alkalinity_textview">Alkalinitas yang diharapkan (Mol)</string>
    <string name="hint_desired_alkalinity">Masukkan nilai yang diharapkan</string>
    <string name="volume_mol_textview">Volume (Mol)</string>
    <string name="hint_volume_mol">Volume (Mol)</string>
    <string name="btn_calculate_textview">Hitung</string>
    <string name="calculator_ammonia_textview">Kalkulator Ammonia</string>
    <string name="calculator_ammonia_desc_textview">Pengujian toxic ammonia berdasarkan data ammonia kit</string>
    <string name="total_ammonia_nitrogen_textview">Total Ammonia Nitrogen (mg/L)</string>
    <string name="hint_current_value">Masukkan nilai</string>
    <string name="temperature_textview">Temperatur (Celsius / C)</string>
    <string name="hint_temperature">Masukkan nilai suhu</string>
    <string name="measured_pH_textview">Measured pH (NBS)</string>
    <string name="hint_measured_ph">Masukkan nilai pH</string>
    <string name="salinity_textview">Salinitas (g/Kg)</string>
    <string name="hint_salinity">Masukkan nilai salinitas</string>
    <string name="calculator_carbon_textview">Kalkulator Karbon</string>
    <string name="carbon_type_textview">Jenis Karbon</string>
    <string name="calculate_result_textview">Hasil Perhitungan</string>
    <string name="calculate_result_desc_textView">Silahkan memilih salah satu jenis kapur dibawah ini yang sesuai dengan kolam anda.</string>
    <string name="sodium_bicarbonate_textView">1. Natrium Bikarbonat (NahCO3)</string>
    <string name="calculator_carbon_desc_textview">Karbon adalah salah satu solusi solusi untuk menggurangi ammonia.</string>
    <string name="sodium_bicarbonate_desc_textView">Kapur jenis Natrium Bikarbonat adalah kapur yang paling mudah ditemui, berikan pada kolam anda sebanyak:</string>
    <string name="calcium_carbonate_textView">2. Kalsium Karbonat (CaCO3)</string>
    <string name="calcium_carbonate_desc_textview">Kapur jenis Kalsium Karbonat adalah kapur yang paling mudah ditemui, berikan pada kolam anda sebanyak:</string>
    <string name="calcium_hydroxide_textview">3. Kalsium Hidroksida (CaOH2)</string>
    <string name="calcium_hydroxide_desc_textview">Kapur jenis Kalsium Hidroksida adalah kapur yang paling mudah ditemui, berikan pada kolam anda sebanyak:</string>
    <string name="close_text_btn">Tutup</string>
    <string name="shrimp_size_100">Ukuran 100</string>
    <string name="shrimp_70_textview">Ukuran 70</string>
    <string name="shrimp_40_textview">Ukuran 40</string>
    <string name="content_filter_textview">Filter Konten</string>
    <string name="filter_by_textview">Urutkan berdasarkan</string>
    <string name="filter_latest_textview">Terbaru</string>
    <string name="filter_cheapest_textview">Termurah</string>
    <string name="filter_most_expensive_textview">Termahal</string>
    <string name="filter_by_size_textview">Urutkan berdasarakan ukuran</string>
    <string name="all_textview">Semua</string>
    <string name="fiter_button_textview">Terapkan</string>
</resources>