<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.shrimpPrice.bottomsheet.FilterBottomSheetFragment">

    <TextView
        android:id="@+id/content_filter_textview"
        style="@style/TextStyleSemiBold14Gray1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:text="@string/content_filter_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/content_filter_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/content_filter_textview" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="25dp"
        android:background="@color/gray6"
        app:layout_constraintTop_toBottomOf="@id/content_filter_textview"
        tools:layout_editor_absoluteX="18dp" />

    <TextView
        android:id="@+id/textView9"
        style="@style/TextStyleSemiBold12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/filter_by_textview"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:checkedChip="@+id/latest"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:singleLine="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/latest"
            style="@style/FilterChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_latest_textview" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cheapest"
            style="@style/FilterChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_cheapest_textview" />

        <com.google.android.material.chip.Chip
            android:id="@+id/most_expensive"
            style="@style/FilterChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_most_expensive_textview" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView10"
        style="@style/TextStyleSemiBold12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/filter_by_size_textview"
        app:layout_constraintStart_toStartOf="@+id/chipGroup"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:checkedChip="@+id/all"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:singleLine="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/all"
            style="@style/FilterChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_textview" />

        <com.google.android.material.chip.Chip
            android:id="@+id/size100"
            style="@style/FilterChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shrimp_size_100" />

        <com.google.android.material.chip.Chip
            android:id="@+id/size70"
            style="@style/FilterChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shrimp_70_textview" />

        <com.google.android.material.chip.Chip
            android:id="@+id/size40"
            style="@style/FilterChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shrimp_40_textview" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apply_btn"
        android:layout_width="0dp"
        style="@style/buttonInput"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="24dp"
        android:text="@string/fiter_button_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup1" />

</androidx.constraintlayout.widget.ConstraintLayout>